--- a/features/landing/organisms/Corporate/components/Program/Program.css
+++ b/features/landing/organisms/Corporate/components/Program/Program.css
@@ -2,11 +2,20 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 96px;
+
+  @media (--smallDown) {
+    flex-direction: column;
+    margin-bottom: 32px;
+  }
 }
 
 .topic {
   flex-basis: 50%;
   text-align: left;
+
+  @media (--smallDown) {
+    margin-bottom: 16px;
+  }
 }
 
 .title {
