--- a/features/landing/organisms/Donation/Donation.css
+++ b/features/landing/organisms/Donation/Donation.css
@@ -5,6 +5,10 @@
   margin-left: 50%;
   background-color: #FAF9F7;
   transform: translateX(-50%);
+
+  @media (--smallDown) {
+    padding: 32px 16px;
+  }
 }
 
 .title {
@@ -15,6 +19,9 @@
 .content {
   display: flex;
 
+  @media (--smallDown) {
+    flex-direction: column;
+  }
 }
 
 .iframe {
