--- a/features/landing/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/organisms/Main/components/Intro/Intro.css
@@ -1,11 +1,22 @@
+.intro {
+  @media (--smallDown) {
+    padding: 0 16px;
+  }
+}
+
 .title {
   margin-bottom: 32px;
   font: var(--title-extra);
 }
 
 .logos {
+  display: flex;
+  justify-content: center;
   margin-bottom: 40px;
-  text-align: center;
+
+  @media (--smallDown) {
+    margin-bottom: 24px;
+  }
 }
 
 .logo {
@@ -17,12 +28,20 @@
 }
 
 .buttons {
+  display: flex;
+  justify-content: center;
   margin-bottom: 120px;
   text-align: center;
 
   & .button.button.button {
     padding: 16px 36px;
     font: var(--text18-28);
+  }
+
+  @media (--smallDown) {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
   }
 }
 
@@ -32,5 +51,14 @@
 
   &:last-of-type {
     margin-right: 0;
+  }
+
+  @media (--smallDown) {
+    margin-right: 0;
+    margin-bottom: 16px;
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
   }
 }
