--- a/features/landing/organisms/Main/components/Steps/Step/Step.css
+++ b/features/landing/organisms/Main/components/Steps/Step/Step.css
@@ -1,3 +1,13 @@
+.step {
+  @media (--smallDown) {
+    margin-bottom: 16px;
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
+}
+
 .text {
   white-space: pre-line;
 }
