--- a/features/landing/organisms/Main/components/Steps/Steps.css
+++ b/features/landing/organisms/Main/components/Steps/Steps.css
@@ -4,4 +4,10 @@
   padding: 0 40px;
   margin: 0 auto;
   margin-bottom: 120px;
+
+  @media (--smallDown) {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 24px;
+  }
 }
