--- a/features/landing/features/partners/molecules/PartnersGroupSelect/PartnersGroupSelect.css
+++ b/features/landing/features/partners/molecules/PartnersGroupSelect/PartnersGroupSelect.css
@@ -1,3 +1,11 @@
 .select.select.select {
-  width: 328px;
+  max-width: 328px;
+
+  @media (--smallDown) {
+    min-width: 220px;
+    }
+  }
+
+.ant-select-selection-selected-value::after {
+    display: none !important;
 }
