--- a/features/landing/features/partners/page/Partners.css
+++ b/features/landing/features/partners/page/Partners.css
@@ -1,15 +1,30 @@
 .main.main {
+  position: relative;
   width: 100%;
   max-width: 960px;
-  padding: 64px 0 120px;
+  padding: 64px 0 88px;
   text-align: left;
+
+  &::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    box-sizing: content-box;
+    width: 100%;
+    height: 1px;
+    padding: 0 100%;
+    margin: 0 -100%;
+    content: '';
+    background-color: var(--divider-color);
+  }
 
   @media (--mediumDown) {
     padding: 16px 0;
   }
 
   @media (--smallDown) {
-    padding: 32px 16px 80px 16px;
+    padding: 32px 16px 56px 16px;
+    margin-bottom: -48px;
   }
 }
 
