feat(global): add relatives to consultation page

--- a/features/common/consultation/organisms/Theme/Theme.css
+++ b/features/common/consultation/organisms/Theme/Theme.css
@@ -62,6 +62,11 @@
   }
 }
 
+.midtitle {
+  margin: 0 0 8px 0;
+  font: var(--title-small);
+}
+
 .subtitle {
   margin: 0 0 8px 0;
   font: var(--title-bold);
