fix(global): remove scrollbar in chat

--- a/features/common/chat/organisms/ChatWrapper/ChatWrapper.css
+++ b/features/common/chat/organisms/ChatWrapper/ChatWrapper.css
@@ -2,6 +2,11 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 8px;
+  max-height: 100%;
   overflow-y: scroll;
+  overscroll-behavior: contain;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 /* stylelint-disable-next-line  хак чтобы оверфлоу-хидден работал с флексом  */
