fix(global): fix paddings

--- a/features/common/chat/organisms/ChatWrapper/ChatWrapper.css
+++ b/features/common/chat/organisms/ChatWrapper/ChatWrapper.css
@@ -1,7 +1,6 @@
 .chatWrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 8px;
+  display: flex;
+  flex-direction: column;
   max-height: 100%;
   overflow-y: scroll;
   overscroll-behavior: contain;
@@ -9,4 +8,3 @@
     display: none;
   }
 }
-/* stylelint-disable-next-line  хак чтобы оверфлоу-хидден работал с флексом  */
