--- a/features/common/chat/organisms/Message/Message.css
+++ b/features/common/chat/organisms/Message/Message.css
@@ -1,4 +1,7 @@
 .message {
+  flex-grow: 0;
+  flex-shrink: 0;
+  align-self: flex-start;
   max-width: 328px;
   height: 100%;
   min-height: 0px;
@@ -7,12 +10,19 @@
   font: var(--text14-20);
   background-color: #fff;
   border-radius: 16px 16px 16px 0;
-  box-shadow: 0 0 3px 0 rgba(0,0,0,0.06);
+  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.06);
+  &:first-child {
+    margin-top: 16px;
+  }
+  &:last-child {
+    margin-bottom: 16px;
+  }
 }
 
 .messageSent {
+  align-self: flex-end;
   margin-left: auto;
-  background-color: #FFEAB7;
+  background-color: #ffeab7;
   border-radius: 16px 16px 0 16px;
 }
 
