--- a/features/common/chat/page/Chat.css
+++ b/features/common/chat/page/Chat.css
@@ -38,7 +38,7 @@
   flex-direction: column;
   justify-content: flex-end;
   height: 100%;
-  padding: 16px;
+  padding: 0 16px;
   background-color: var(--background-color);
 }
 
