--- a/ui/organisms/Footer/components/Login/Login.css
+++ b/ui/organisms/Footer/components/Login/Login.css
@@ -4,6 +4,7 @@
   & .button {
     align-self: flex-start;
     margin-right: 12px;
+    white-space: nowrap;
 
     &:last-of-type {
       margin-right: 0;
