--- a/ui/config.css
+++ b/ui/config.css
@@ -86,10 +86,20 @@ body {
   overflow-x: hidden;
 }
 
-.ReactModal__Overlay--after-open {
-  z-index: 10;
+.ReactModalPortal {
+  position: relative;
+  z-index: 20;
+
+  @media (--smallDown) {
+    max-height: 100%;
+  }
+}
+
+[class^="ReactModal"] {
+  z-index: 20;
 
   @media (--smallDown) {
       width: 100%;
+      min-width: auto;
   }
 }
