--- a/features/common/modal/index.css
+++ b/features/common/modal/index.css
@@ -10,6 +10,9 @@
   box-shadow: 0 0 8px 0 rgba(63, 63, 68, 0.04),
     0 0 20px 0 rgba(63, 63, 68, 0.12);
   transform: translate(-50%, -50%);
+  max-height: calc(100% - 50px);
+  overflow-y: scroll;
+  overflow-x: hidden;
 
   @media (--smallDown) {
     padding: 16px 0 0;
