feat(global): add images

--- a/features/client/features/beforeConsultation/BeforeConsultation.css
+++ b/features/client/features/beforeConsultation/BeforeConsultation.css
@@ -9,9 +9,9 @@
 
 .logo {
   display: block;
+  width: 79px;
   margin: 0 auto;
   margin-bottom: 16px;
-
 
   @media (--smallDown) {
     width: 72px;
