--- a/features/client/features/waitingAnswer/page/WaitingAnswer.css
+++ b/features/client/features/waitingAnswer/page/WaitingAnswer.css
@@ -1,3 +1,7 @@
+.layout {
+  background-color: #fff;
+}
+
 .waitingAnswer {
   padding: 48px 0 120px 0;
   background-color: #fff;
@@ -11,6 +15,11 @@
   display: flex;
   justify-content: center;
   margin-bottom: 28px;
+}
+
+.image {
+  align-self: flex-start;
+  width: 180px;
 }
 
 .title {
