feat(global): deleted extra folder, change urls

--- a/features/client/features/formFinish/page/FormFinish.css
+++ b/features/client/features/formFinish/page/FormFinish.css
@@ -1,7 +1,16 @@
+.formFinish {
+  background-color: #fff;
+}
+
 .logo {
   display: flex;
   justify-content: center;
   margin-bottom: 28px;
+}
+
+.image {
+  width: 192px;
+  align-self: center;
 }
 
 .title {
