--- a/features/manager/features/chooseDoctor/organisms/Form/FormGlobal.css
+++ b/features/manager/features/chooseDoctor/organisms/Form/FormGlobal.css
@@ -1,6 +1,10 @@
 .doctorsList {
   & .ant-radio-group {
     width: 100%;
+    max-height: 400px;
+    overflow-y: scroll;
+    border-top: 1px solid rgba(21, 24, 51, 0.12);
+    border-bottom: 1px solid rgba(21, 24, 51, 0.12);
   }
 
   & .ant-radio-wrapper {
