--- a/features/client/features/consultation/molecules/Notification/Notification.css
+++ b/features/client/features/consultation/molecules/Notification/Notification.css
@@ -29,3 +29,18 @@
   margin-right: 20px;
   border-radius: 50%;
 }
+
+.link.link {
+  color: var(--color-link);
+  border-bottom: 1px solid transparent;
+
+  &:hover {
+    color: var(--color-link);
+    border-bottom: 1px solid var(--color-link-underline);
+  }
+
+  &:active {
+    color: var(--color-link);
+    border-bottom: 1px solid var(--color-link-underline);
+  }
+}
