--- a/ui/atoms/Select/SelectGlobal.css
+++ b/ui/atoms/Select/SelectGlobal.css
@@ -44,7 +44,7 @@
 .ant-select-dropdown-menu-item {
   padding: 8px 16px !important;
   font: var(--text16-24);
-  white-space: initial;
+  white-space: initial !important;
 
   &:hover {
     background-color: #f7f6f2;
@@ -79,7 +79,7 @@
 
 .ant-select-disabled .ant-select-selection {
   color: var(--color-default);
-  background-color: #EFEFF4;
+  background-color: #efeff4;
 }
 
 .ant-select-disabled .ant-select-selection-selected-value {
