--- a/ui/molecules/Dropdown/Dropdown.css
+++ b/ui/molecules/Dropdown/Dropdown.css
@@ -1,13 +1,16 @@
 .menu {
   position: absolute;
-  top: 40px;
+  top: 39px;
   right: 0;
   display: none;
   flex-direction: column;
+  border-radius: 4px;
+  box-shadow: 0 0 1px 1px rgba(63,63,68,0.04), 0 4px 12px 0 rgba(63,63,68,0.12);
 }
 
 .dropdown {
   position: relative;
+  cursor: pointer;
 
   &:hover .menu,
   &:focus .menu {
