--- a/features/common/modal/index.css
+++ b/features/common/modal/index.css
@@ -15,6 +15,8 @@
   transform: translate(-50%, -50%);
 
   @media (--smallDown) {
+    width: 100%;
+    min-width: auto;
     padding: 16px 0 0;
   }
 }
