--- a/ui/atoms/Button/Button.css
+++ b/ui/atoms/Button/Button.css
@@ -120,3 +120,21 @@
 }
 
 
+.loading.loading.loading.loading {
+  position: relative;
+}
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  background-color: #fff;
+  border-radius: 8px;
+  transform: translate(-50%, -50%);
+}
+
+.hidden {
+  display: none;
+}
