--- a/ui/atoms/Button/Button.css
+++ b/ui/atoms/Button/Button.css
@@ -126,15 +126,17 @@
 
 .loader {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 25px;
-  height: 25px;
-  background-color: #fff;
-  border-radius: 8px;
-  transform: translate(-50%, -50%);
+  top: calc(50% - 10px);
+  right: 8px;
+  animation: rotate 2s linear infinite;
 }
 
 .hidden {
   display: none;
 }
+
+@keyframes rotate { 
+  100% { 
+      transform:rotate(360deg); 
+    } 
+  }
