--- a/features/client/features/newClaim/organisms/ClaimForm/ClaimForm.css
+++ b/features/client/features/newClaim/organisms/ClaimForm/ClaimForm.css
@@ -32,14 +32,6 @@
     background-color: rgba(21, 24, 51, 0.12);
   }
 
-  &:last-of-type {
-    padding-bottom: 0;
-
-    &::after {
-      display: none;
-    }
-  }
-
   @media (--smallDown) {
     padding: 32px 16px 48px;
   }
@@ -54,6 +46,20 @@
     @media (--smallDown) {
       max-width: 328px;
     }
+  }
+}
+
+.articleContacts {
+  padding-bottom: 56px;
+
+  @media (--smallDown) {
+    padding-bottom: 40px;
+  }
+}
+
+.footer {
+  &::after {
+    display: none;
   }
 }
 
