--- a/ui/organisms/EmergingFormElement/EmergingFormElement.css
+++ b/ui/organisms/EmergingFormElement/EmergingFormElement.css
@@ -6,7 +6,7 @@
   width: 100%;
   padding: 24px 0 32px 0;
   margin-top: 24px !important;
-  margin-bottom: 24px;
+  margin-bottom: 0;
   background-color: #f7f7f9;
 
   & > *:last-child {
