--- a/features/client/features/editClaim/features/Questions/organisms/Form/ClaimForm.css
+++ b/features/client/features/editClaim/features/Questions/organisms/Form/ClaimForm.css
@@ -42,7 +42,7 @@
     width: 100%;
     height: 1px;
     content: '';
-    background-color: rgba(21, 24, 51, 0.12);
+    background-color: var(--divider-color);
   }
 
   &:last-of-type {
