--- a/features/client/features/newClaim/organisms/ClaimForm/ClaimForm.css
+++ b/features/client/features/newClaim/organisms/ClaimForm/ClaimForm.css
@@ -29,7 +29,7 @@
     width: 100%;
     height: 1px;
     content: '';
-    background-color: rgba(21, 24, 51, 0.12);
+    background-color: var(--divider-color);
   }
 
   @media (--smallDown) {
