--- a/features/manager/features/chooseDoctor/organisms/Form/FormGlobal.css
+++ b/features/manager/features/chooseDoctor/organisms/Form/FormGlobal.css
@@ -3,8 +3,8 @@
     width: 100%;
     max-height: 400px;
     overflow-y: scroll;
-    border-top: 1px solid rgba(21, 24, 51, 0.12);
-    border-bottom: 1px solid rgba(21, 24, 51, 0.12);
+    border-top: 1px solid var(--divider-color);
+    border-bottom: 1px solid var(--divider-color);
   }
 
   & .ant-radio-wrapper {
