--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/Count/Count.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/Count/Count.css
@@ -15,9 +15,12 @@
 
 .label {
   font: var(--text16-24);
+  margin: 0;
+  font-weight: 500;
 }
 
 .number {
+  font-family: var(--fontFamily-title);
   margin-bottom: 4px;
   font-size: 64px;
   line-height: 64px;
@@ -25,7 +28,7 @@
 
 .countItem {
   flex-basis: 50%;    
-  padding: 24px 0;
+  padding: 32px 0;
 
   &:first-of-type {
     border-right: 1px solid rgba(21, 24, 51, 0.08);
