--- a/features/login/organisms/Footer/Footer.css
+++ b/features/login/organisms/Footer/Footer.css
@@ -10,8 +10,8 @@
     left: 0;
     width: 100%;
     height: 1px;
-    padding: 0 100%;
-    margin: 0 -50%;
+    padding: 0 110%;
+    margin: 0px -55%;
     content: '';
     background-color: var(--divider-color);
   }
