--- a/features/main/layout/organisms/Header/organisms/Navigation/Navigation.css
+++ b/features/main/layout/organisms/Header/organisms/Navigation/Navigation.css
@@ -43,10 +43,6 @@
   }
 }
 
-.link:hover svg {
-  fill: var(--color-primary);
-}
-
 .closeButton {
   display: none;
   align-self: flex-end;
@@ -56,7 +52,16 @@
   background-color: transparent;
   border: none;
 
+  & svg {
+    width: 24px;
+    height: 24px;
+  }
+
   @media (max-width: 959px) {
     display: block;
   }
+}
+
+.link:hover svg {
+  fill: var(--color-primary);
 }
