--- a/ui/atoms/Logo/Logo.css
+++ b/ui/atoms/Logo/Logo.css
@@ -1,9 +1,23 @@
 .logo {
   flex-shrink: 0;
-  width: 200px;
-  height: 38px;
+  height: 48px;
 
   @media (--smallDown) {
-    height: 32px;
+    height: 38px;
   }
+}
+
+.desktopLogo {
+  width: 238px;
+  height: 48px;
+
+  @media (--smallDown) {
+    display: none;
+  }
+}
+
+.mobileLogo {
+  display: none;
+  width: 200px;
+  height: 38px;
 }
