--- a/features/client/features/progressBar/organisms/ProgressBar/ProgressBar.css
+++ b/features/client/features/progressBar/organisms/ProgressBar/ProgressBar.css
@@ -5,12 +5,12 @@
   max-width: 800px;
   margin: 0 auto;
   background-color: inherit;
-  background-image: linear-gradient(to top, transparent 30%, #9F9FA8 1px, transparent calc(30% + 1px));
+  background-image: linear-gradient(to top, transparent 30%, rgba(21, 24, 51, 0.2) 1px, transparent calc(30% + 1px));
   background-position: top;
 
   @media (--smallDown) {
     max-width: 272px;
-    background-image: linear-gradient(to top, transparent 45%, #9F9FA8 1px, transparent calc(45% + 1px));
+    background-image: linear-gradient(to top, transparent 45%, rgba(21, 24, 51, 0.2) 1px, transparent calc(45% + 1px));
   }
 }
 
