--- a/features/client/features/editClaim/features/Situation/organisms/Form/ClaimForm.css
+++ b/features/client/features/editClaim/features/Situation/organisms/Form/ClaimForm.css
@@ -77,6 +77,7 @@
 }
 
 .label {
+  position: relative;
   z-index: 1;
   display: block;
   margin: 24px 0 8px 0;
@@ -87,6 +88,10 @@
 .labelSmall {
   display: block;
   margin: 16px 0 8px 0;
+}
+
+.labelInAddFieldContainer {
+  margin-top: 0;
 }
 
 .emergingLabel {
@@ -137,7 +142,7 @@
   align-self: flex-start;
   max-width: none;
   padding: 8px 16px;
-  margin-top: 40px;
+  margin-top: 24px;
 }
 
 .text {
