--- a/ui/organisms/AddFieldContainer/AddFieldContainer.css
+++ b/ui/organisms/AddFieldContainer/AddFieldContainer.css
@@ -5,3 +5,18 @@
   margin-right: 8px;
   fill: var(--color-primary);
 }
+
+.fields {
+  position: relative;
+  padding-bottom: 40px;
+
+  &::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  content: '';
+  background-color: var(--divider-color);
+}
+}
