--- a/features/client/features/editClaim/features/Questions/organisms/Form/ClaimForm.css
+++ b/features/client/features/editClaim/features/Questions/organisms/Form/ClaimForm.css
@@ -45,32 +45,23 @@
     background-color: var(--divider-color);
   }
 
-  &:last-of-type {
-    padding-bottom: 0;
-
-    &::after {
-      display: none;
-    }
+  @media (--smallDown) {
+    padding: 32px 16px 48px;
   }
 
   & .button.button {
-    width: 480px;
+    width: 100%;
     max-width: 480px;
+    padding: 18px 20px;
     margin: 0 auto;
-    margin-bottom: 104px;
     font: var(--text18-28);
 
     @media (--smallDown) {
-      width: 100%;
       max-width: 328px;
-      margin-bottom: 96px;
     }
   }
-
-  @media (--smallDown) {
-    padding: 32px 16px 40px 16px;
-  }
 }
+
 
 .label {
   position: relative;
@@ -103,6 +94,7 @@
 
 .historyComboContainer {
   display: flex;
+  justify-content: space-between;
 
   &:last-child {
     margin-right: 0;
@@ -153,6 +145,8 @@
 }
 
 .iconBack {
+  width: 24px;
+  height: 24px;
   margin-right: 4px;
   fill: var(--color-primary);
   transform: rotate(180deg);
@@ -161,6 +155,11 @@
 .footerBack {
   display: flex;
   align-items: center;
+  margin-top: 104px;
+
+  @media (--smallDown) {
+    margin-top: 96px;
+  }
 }
 
 .emergeField {
@@ -176,4 +175,11 @@
 .checkbox.checkbox {
   display: flex;
   margin: 24px 0 8px 0;
+}
+
+.footer {
+  padding: 48px 160px 0 160px;
+  &::after {
+    display: none;
+  }
 }
