--- a/features/client/features/progressBar/molecule/StepPointer/StepPointer.css
+++ b/features/client/features/progressBar/molecule/StepPointer/StepPointer.css
@@ -30,7 +30,7 @@
 
 .empty {
   color: var(--text-color-primary);
-  border: 1px solid var(--text-color-primary);
+  border: 1px solid rgba(21, 24, 51, 0.15);
 
   &:hover {
     color: var(--color-primary);
@@ -55,14 +55,14 @@
 .disabled {
   color: #9F9FA8;
   background-color: inherit;
-  border: 1px solid #9F9FA8;
-  fill: #9F9FA8;
+  border: 1px solid rgba(21, 24, 51, 0.2);
+  fill: rgba(21, 24, 51, 0.2);
 
   &:hover {
     color: #9F9FA8;
     cursor: auto;
-    border: 1px solid #9F9FA8;
-    fill: #9F9FA8;
+    border: 1px solid rgba(21, 24, 51, 0.2);
+    fill: rgba(21, 24, 51, 0.2);
   }
 }
 
