fix(ui): fix svg icons sizes

--- a/features/common/chat/page/Chat.css
+++ b/features/common/chat/page/Chat.css
@@ -60,6 +60,8 @@
 }
 
 .inputIcon {
+  width: 24px;  
+  height: 24px;
   fill: var(--color-primary);
 }
 
@@ -73,3 +75,4 @@
   background-color: transparent;
   border: 0;
 }
+
