--- a/ui/atoms/Button/Button.css
+++ b/ui/atoms/Button/Button.css
@@ -128,6 +128,8 @@
   position: absolute;
   top: calc(50% - 10px);
   right: 8px;
+  width: 24px;
+  height: 24px;
   animation: rotate 2s linear infinite;
 }
 
