--- a/features/client/features/consultation/molecules/Notification/Notification.css
+++ b/features/client/features/consultation/molecules/Notification/Notification.css
@@ -14,6 +14,7 @@
 }
 
 .title {
+  margin: 0 0 8px 0;
   font: var(--title-small);
 }
 
@@ -27,7 +28,6 @@
 .logo {
   width: 80px;
   margin-right: 20px;
-  border-radius: 50%;
 }
 
 .link.link {
