--- a/features/common/chat/page/Chat.css
+++ b/features/common/chat/page/Chat.css
@@ -44,6 +44,9 @@
 }
 
 .input {
+  border-bottom-right-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+
   & > * {
     margin-top: auto !important;
     resize: none !important;
