--- a/ui/config.css
+++ b/ui/config.css
@@ -75,6 +75,7 @@ body {
 /* custom media queries */
 @custom-media --xsmallDown (max-width: 500px);
 @custom-media --smallDown (max-width: 767px);
+@custom-media --mediumSecondDown (max-width: 832px);
 @custom-media --mediumDown (max-width: 959px);
 
 #__next {
