--- a/features/client/organisms/ClaimFormLayout/Layout.css
+++ b/features/client/organisms/ClaimFormLayout/Layout.css
@@ -3,7 +3,11 @@
   font: var(--text16-24);
   text-align: center;
   background-color: var(--background-color);
-  
+
+  @media (--mediumSecondDown) {
+    padding: 0 24px 80px;
+  }
+
   @media (--smallDown) {
     padding: 0 16px 80px;
     font: var(--text14-20);
@@ -19,6 +23,7 @@
   font: var(--title-regular);
 
   @media (--smallDown) {
+    padding: 0 16px;
     margin: 24px auto 8px;
   }
 }
@@ -29,6 +34,7 @@
   color: #82839B;
 
   @media (--smallDown) {
+    padding: 0 16px;
     margin: 0 0 24px 0;
   }
 }
