fix(client): add paddings for links in client header and footer

--- a/features/client/features/menu/organisms/Menu/Menu.css
+++ b/features/client/features/menu/organisms/Menu/Menu.css
@@ -34,8 +34,16 @@
 }
 
 .consultation {
+  padding-top: 16px;
+  padding-bottom: 15px;
+
   & .menuItemText {
     margin-left: 8px;
+  }
+
+  @media (--smallDown) {
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
 }
 
