--- a/features/client/organisms/Header/Header.css
+++ b/features/client/organisms/Header/Header.css
@@ -3,12 +3,12 @@
   flex-shrink: 0;
   align-items: center;
   justify-content: space-between;
-  padding: 9px 32px 8px 32px;  
+  padding: 0 32px;  
   background-color: var(--background-color);
   border-bottom: 1px solid var(--divider-color);
 
   @media (--smallDown) {
-    padding: 8px 16px;
+    padding: 0 16px;
   }
 }
 
