--- a/ui/organisms/Footer/components/NavIcon/NavIcon.css
+++ b/ui/organisms/Footer/components/NavIcon/NavIcon.css
@@ -4,7 +4,7 @@
   height: 24px;
   fill: var(--text-color-secondary);
 
-    @media (--mediumDown) {
+    @media (--smallDown) {
       display: inline-block;
     }
 }
