--- a/features/main/layout/organisms/Header/Header.css
+++ b/features/main/layout/organisms/Header/Header.css
@@ -1,13 +1,23 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 24px 48px;
+  padding: 0 48px;
 
   @media (--smallDown) {
-    padding: 16px 8px;
+    padding: 0 16px;
   }
 }
 
 .headerWrapper {
   display: block;
+}
+
+.logo.logo.logo {
+  max-height: 96px;
+  padding: 24px 0;
+
+  @media (--smallDown) {
+    max-height: 48px;
+    padding: 8px 0;    
+  }
 }
