--- a/features/client/features/claims/molecules/ClaimHeader/ClaimHeader.css
+++ b/features/client/features/claims/molecules/ClaimHeader/ClaimHeader.css
@@ -28,3 +28,33 @@
   font: var(--text14-20);
   color: var(--text-color-secondary);
 }
+
+.titleWrapper {
+  display: flex;
+  cursor: pointer;
+
+  &:hover * {
+    color: var(--color-hover);
+  }
+
+  & > .hoverArrow {
+    display: none;
+  }
+
+  &:hover > .hoverArrow {
+    display: block;
+  }
+  &:hover > .defaultArrow {
+    display: none;
+  }
+}
+
+.arrow {
+
+  height: 28px;
+  margin-left: 8px;
+  transform: rotate(180deg);
+  @media (--mediumDown) {
+    height: 24px;
+  }
+}
