--- a/features/client/features/beforeConsultation/BeforeConsultation.css
+++ b/features/client/features/beforeConsultation/BeforeConsultation.css
@@ -70,6 +70,13 @@
     background-color: var(--divider-color);
   }
 
+  @media (--mediumSecondDown) {
+      &::after {
+      padding: 0;
+      margin: 0;
+    }
+  }
+
   &:last-of-type {
     padding-bottom: 0;
 
