--- a/features/client/organisms/Layout/Layout.css
+++ b/features/client/organisms/Layout/Layout.css
@@ -5,8 +5,16 @@
   padding-bottom: 120px;
   background-color: var(--background-color);
 
+  @media (--mediumSecondDown) {
+    padding: 24px 24px 80px;
+  }
+
   @media (--smallDown) {
-    padding-top: 24px;
-    padding-bottom: 80px;
+    padding: 24px 16px 80px;
+    font: var(--text14-20);
+  }
+
+  @media (--xsmallDown) {
+    padding: 24px 0 80px;
   }
 }
