--- a/ui/atoms/Button/Button.css
+++ b/ui/atoms/Button/Button.css
@@ -108,7 +108,7 @@
 }
 
 .ant-btn-m.ant-btn-m {
-  padding: 6px 20px 8px 20px;
+  padding: 8px 20px;
   font: var(--text16-24);
   border-radius: 6px;
 }
