--- a/features/main/layout/organisms/Header/Header.css
+++ b/features/main/layout/organisms/Header/Header.css
@@ -1,5 +1,6 @@
 .header {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding: 0 48px;
 
@@ -18,6 +19,20 @@
 
   @media (--smallDown) {
     max-height: 48px;
-    padding: 8px 0;    
+    padding: 8px 0;
+  }
+}
+
+.mobileMenu {
+  display: none;
+
+  @media (--mediumDown) {
+    display: block;
+  }
+}
+.desktopMenu {
+  display: block;
+  @media (--mediumDown) {
+    display: none;
   }
 }
