--- a/ui/config.css
+++ b/ui/config.css
@@ -79,6 +79,11 @@ body {
 @custom-media --mediumSecondDown (max-width: 832px);
 @custom-media --mediumDown (max-width: 959px);
 
+@custom-media --xsmallUp (min-width: 501px);
+@custom-media --smallUp (min-width: 768px);
+@custom-media --mediumSecondUp (min-width: 833px);
+@custom-media --mediumUp (min-width: 960px);
+
 #__next {
   display: flex;
   flex-direction: column;
