--- a/features/main/layout/organisms/Header/Header.css
+++ b/features/main/layout/organisms/Header/Header.css
@@ -4,8 +4,10 @@
   justify-content: space-between;
   padding: 0 48px;
 
-  @media (--smallDown) {
+  @media (--mediumDown) {
     padding: 0 16px;
+
+    padding-top: 8px;
   }
 }
 
@@ -15,11 +17,9 @@
 
 .logo.logo.logo {
   max-height: 96px;
-  padding: 24px 0;
 
   @media (--smallDown) {
     max-height: 48px;
-    padding: 8px 0;
   }
 }
 
