--- a/features/landing/features/partners/molecules/Notification/Notification.css
+++ b/features/landing/features/partners/molecules/Notification/Notification.css
@@ -30,6 +30,7 @@
 
   @media (--smallDown) {
     flex-direction: column;
+    align-items: flex-end;
   }
 }
 
@@ -47,7 +48,10 @@
 
   @media (--smallDown) {
     width: 100% !important;
-    padding: 12px 0 !important;
     white-space: nowrap !important;
+  }
+
+  @media (--smallDown) {
+    padding: 12px 16px !important;
   }
 }
