--- a/features/client/features/claims/molecules/ClaimHeader/ClaimHeader.css
+++ b/features/client/features/claims/molecules/ClaimHeader/ClaimHeader.css
@@ -52,9 +52,11 @@
 .arrow {
 
   height: 28px;
+  width: 28px;
   margin-left: 8px;
   transform: rotate(180deg);
   @media (--mediumDown) {
     height: 24px;
+    width: 24px;
   }
 }
