--- a/features/landing/features/partners/organisms/PartnersList/PartnersList.css
+++ b/features/landing/features/partners/organisms/PartnersList/PartnersList.css
@@ -41,14 +41,14 @@
 .partnersList {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   margin: 48px 0 0 0;
 }
 
 .partnerCard {
-  max-width: 120px;
+  max-width: 200px;
   padding-top: 0;
   margin: 0 32px 32px 32px;
+  text-align: center;
 
   @media (--mediumDown) {
     margin: 0 24px 24px 24px;
