--- a/features/landing/organisms/PartnerCard/PartnerCard.css
+++ b/features/landing/organisms/PartnerCard/PartnerCard.css
@@ -7,6 +7,14 @@
 }
 
 .logo {
+  width: 200px;
+  max-height: 100%;
+  object-fit: contain;
+}
+
+.logoWrapper {
+  display: flex; 
+  height: 112px;
   margin-bottom: 24px;
 }
 
