--- a/features/landing/features/experts/features/Expert/page/ExpertPage.css
+++ b/features/landing/features/experts/features/Expert/page/ExpertPage.css
@@ -39,20 +39,21 @@
 }
 
 .expert {
-  display: flex;
   padding: 32px;
   white-space: pre-line;
   border: 1px solid rgba(21,24,51,0.12);
   border-radius: 8px;
 
   @media (--smallDown) {
+    display: flex;
     flex-direction: column;
     padding: 24px;
   }
 }
 
 .photo {
-  align-self: flex-start;
+  float: left;
+  max-width: 100%;
   margin: 0 32px 0 0;
   border-radius: 50%;
 
