--- a/features/main/layout/organisms/Header/atoms/BurgerButton/BurgerButton.css
+++ b/features/main/layout/organisms/Header/atoms/BurgerButton/BurgerButton.css
@@ -1,4 +1,5 @@
 .openButton {
+  position: relative;
   display: block;
   padding: 0;
   font-size: 0;
@@ -9,6 +10,17 @@
   & svg {
     width: 24px;
     height: 24px;
+  }
+
+  &::after {
+    position: absolute;
+    top: -20%;
+    left: -27%;
+    z-index: 10;
+    display: block;
+    width: 40px;
+    height: 40px;
+    content: '';
   }
 }
 
