--- a/ui/molecules/HintInput/HintInput.css
+++ b/ui/molecules/HintInput/HintInput.css
@@ -1,5 +1,9 @@
-.hintInput.ant-select-dropdown {
+.hintInput > .ant-select-selection {
   padding: 0;
+}
+
+.hintInput .ant-input {
+  background: #fff !important;
 }
 
 .hidden {
