--- a/features/login/features/signIn/atoms/OpenSignUpModalButton/OpenSignUpModalButton.css
+++ b/features/login/features/signIn/atoms/OpenSignUpModalButton/OpenSignUpModalButton.css
@@ -2,8 +2,27 @@
   font: var(--text14-20);
 }
 
-.openSignUpButton {
-  display: inline;
+.openSignUpButton.openSignUpButton.openSignUpButton {
+  display: inline-block;
+  padding: 0;
+  font: var(--text14-20);
+  color: var(--color-link);
+  cursor: pointer;
   background-color: transparent;
   border: none;
+  border-bottom: 1px solid transparent;
+  border-radius: 0;
+  box-shadow: none;
+
+  &:hover {
+    border-bottom: 1px solid var(--color-link-underline);
+  }
+
+  &:active {
+    background-color: transparent;
+  }
+
+  &:focus {
+    background-color: transparent;
+  }
 }
