fix(landing): fix mobile partners styles

--- a/features/landing/features/home/organisms/Experts/Experts.css
+++ b/features/landing/features/home/organisms/Experts/Experts.css
@@ -19,7 +19,9 @@
 
   @media (--smallDown) {
     flex-direction: column;
+    width: 100vw;
     padding: 32px 16px;
+    margin-left: 0;
   }
 }
 
