--- a/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
@@ -1,13 +1,23 @@
 .title {
   max-width: 800px;
-  margin: 0 auto;
-  margin-bottom: 40px;
+  margin: 0 auto 40px auto;
   font: var(--title-regular);
+
+  @media (--smallDown) {
+    max-width: 100vw;
+    padding: 0 16px;
+    margin: 0 0 40px 0;
+  }
 }
 
 .subtitle {
   margin-bottom: 32px;
   font: var(--text18-28);
+
+  @media (--smallDown) {
+    max-width: 100vw;
+    padding: 0 16px;
+  }
 }
 
 .button.button.button {
