--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -2,10 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-right: 16px;
   margin-bottom: 68px;
 
   @media (--smallDown) {
-    max-width: 90vw;
+    max-width: 100vw;
     margin-bottom: 40px;
     overflow: scroll;
   }
@@ -51,3 +52,8 @@
   font: var(--text14-20);
 }
 
+.buttonWrapper {
+  @media (--smallDown) {
+    padding-right: 16px;
+  }
+}
