--- a/features/landing/features/home/organisms/Corporate/components/Program/Program.css
+++ b/features/landing/features/home/organisms/Corporate/components/Program/Program.css
@@ -5,6 +5,8 @@
 
   @media (--smallDown) {
     flex-direction: column;
+    max-width: 100vw;
+    padding: 0 16px;
     margin-bottom: 32px;
   }
 }
