--- a/features/landing/features/home/organisms/Donation/Donation.css
+++ b/features/landing/features/home/organisms/Donation/Donation.css
@@ -7,7 +7,7 @@
   transform: translateX(-50%);
 
   @media (--smallDown) {
-    padding: 32px 16px;
+    padding: 32px 0;
     margin-bottom: -56px;
   }
 }
