--- a/features/landing/features/home/organisms/Main/components/Steps/Steps.css
+++ b/features/landing/features/home/organisms/Main/components/Steps/Steps.css
@@ -8,6 +8,8 @@
   @media (--smallDown) {
     flex-direction: column;
     align-items: center;
+    width: 100vw;
     margin-bottom: 24px;
+    margin-left: 0;
   }
 }
