--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/Count/Count.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/Count/Count.css
@@ -1,3 +1,9 @@
+.countWrapper {
+  @media (--smallDown) {
+    padding: 0 16px;
+  }
+}
+
 .count {
   display: flex;
   max-width: 480px;
@@ -7,10 +13,6 @@
   background-color: #F7F6F2;
   border: 1px solid #F1EFED;
   border-radius: 20px;
-
-  @media (--smallDown) {
-    width: 100%;
-  }
 }
 
 .label {
