--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -5,7 +5,7 @@
   margin-bottom: 68px;
 
   @media (--smallDown) {
-    max-width: 90vw;
+    max-width: 100vw;
     margin-bottom: 40px;
     overflow: scroll;
   }
@@ -51,3 +51,20 @@
   font: var(--text14-20);
 }
 
+.buttonWrapper {
+  @media (--smallDown) {
+    padding-right: 16px;
+  }
+}
+
+.list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  @media (--smallDown) {
+    &:first-child {
+      padding-left: 16px;
+    }
+  }
+}
