--- a/ui/config.css
+++ b/ui/config.css
@@ -74,6 +74,7 @@ body {
 }
 
 /* custom media queries */
+@custom-media --xxsmallDown (max-width: 360px);
 @custom-media --xsmallDown (max-width: 500px);
 @custom-media --smallSecondDown (max-width: 540px);
 @custom-media --smallDown (max-width: 767px);
