feat(ui): fix checkbox styles

--- a/ui/atoms/Checkbox/Checkbox.css
+++ b/ui/atoms/Checkbox/Checkbox.css
@@ -1,7 +1,11 @@
 .ant-checkbox-inner.ant-checkbox-inner {
-  width: 21px;
-  height: 21px;
+  width: 20px;
+  height: 20px;
   transition: border-color 0.2s ease; 
+
+  &::after {
+    left: 5px;
+  }
 }
 
 .ant-checkbox-checked.ant-checkbox-checked .ant-checkbox-inner {
