--- a/features/login/features/confirm/organisms/Modal/Modal.css
+++ b/features/login/features/confirm/organisms/Modal/Modal.css
@@ -1,7 +1,9 @@
 .modal {
+  max-width: 400px;
   padding: 0 24px 40px;
 
   @media (--smallDown) {
+    max-width: auto;
     padding: 0 16px 32px;
   }
 }
