fix(client): fix redirect button on /client

--- a/features/common/consultation/organisms/ExpertAnswers/ExpertAnswers.css
+++ b/features/common/consultation/organisms/ExpertAnswers/ExpertAnswers.css
@@ -39,6 +39,10 @@
 .article {
   margin-bottom: 48px;
 
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+
   @media (--smallDown) {
     margin-bottom: 24px;
   }
