--- a/features/client/features/consultation/organisms/withFinishModal/organisms/Modal/Modal.css
+++ b/features/client/features/consultation/organisms/withFinishModal/organisms/Modal/Modal.css
@@ -1,4 +1,8 @@
 .modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 720px;
   padding: 13px 40px 40px 40px;
 }
 
