--- a/features/landing/features/contacts/page/Contacts.css
+++ b/features/landing/features/contacts/page/Contacts.css
@@ -37,3 +37,15 @@
     margin: 0 0 24px 0;
   }
 }
+
+.mapContainer {
+  width: 100%;
+  height: 364px;
+  margin-bottom: 80px;
+  background-color: var(--divider-color);
+
+  @media (--smallDown) {
+    height: 450px;
+    margin-bottom: 48px;
+  }
+}
