--- a/features/common/consultation/organisms/Theme/components/Digest/Digest.css
+++ b/features/common/consultation/organisms/Theme/components/Digest/Digest.css
@@ -1,5 +1,7 @@
 .digest {
+  max-width: 100%;
   padding-bottom: 96px;
+  margin: 0 120px 0 144px;
 
     &::after {
     position: absolute;
@@ -21,5 +23,25 @@
 
   @media (--smallDown) {
     padding-bottom: 64px;
+    margin: 0 auto;
   }
+}
+
+.info {
+  width: 100%;
+  max-width: 240px;
+  margin-right: 56px;
+
+  &:last-of-type {
+    margin-right: 0;
+  }
+
+  @media (--smallDown) {
+    max-width: none;
+    margin-right: 0;
+  }
+}
+
+.container {
+  justify-content: flex-start;
 }
