--- a/features/landing/organisms/PartnerCard/PartnerCard.css
+++ b/features/landing/organisms/PartnerCard/PartnerCard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 176px;
+  width: 176px;
 
   @media (--smallDown) {
     margin-right: 32px;
