--- a/src/ui/button/Button.css
+++ b/src/ui/button/Button.css
@@ -2,6 +2,10 @@
   border-radius: 8px;
 }
 
+.disabled {
+  opacity: 0.6;
+}
+
 /* kind */
 
 .primary {
@@ -13,6 +17,7 @@
 .secondary {
   color: var(--color-link);
   border: 1px solid var(--color-primary);
+  box-shadow: inset 0 1px 1px 0.5px rgba(255,255,255,0.5), 0 1px 2px 0 rgba(0,0,0,0.04);
 }
 
 .extra {
