--- a/src/ui/button/Button.css
+++ b/src/ui/button/Button.css
@@ -1,9 +1,9 @@
 .button {
   border-radius: 8px;
-}
 
-.disabled {
-  opacity: 0.6;
+  &[disabled] {
+    opacity: 0.4;
+  }
 }
 
 /* kind */
@@ -12,18 +12,45 @@
   color: #fff;
   background-color: var(--color-primary);
   box-shadow: inset 0 1px 1px 0.5px rgba(255,255,255,0.1), 0 3px 6px 0 rgba(60,84,238,0.2);
+
+  &:hover, &:focus {
+    background-color: #354AD4;
+    box-shadow: inset 0 1px 1px 0.5px rgba(255,255,255,0.1), 0 1px 3px 0 rgba(60,84,238,0.1);
+  }
+
+  &:active {
+    background-color: #2F41BA;
+    box-shadow: none;
+  }
 }
 
 .secondary {
   color: var(--color-link);
-  border: 1px solid var(--color-primary);
-  box-shadow: inset 0 1px 1px 0.5px rgba(255,255,255,0.5), 0 1px 2px 0 rgba(0,0,0,0.04);
+  border: 1px solid rgba(60,84,238, 0.65);
+
+  &:hover, &:focus {
+    border-color: var(--color-primary);
+  }
+
+  &:active {
+    background-color: rgba(60,84,238,0.08);
+  }
 }
 
 .extra {
   color: var(--color-text-primary);
   background-color: #E8E9F2;
   border: 1px solid #DCDCE7;
+  box-shadow: inset 0 1px 1px 0.5px rgba(255,255,255,0.25), 0 1px 2px 0 rgba(0,0,0,0.04);
+
+  &:hover, &:focus {
+    background-color: #DCDCE7;
+  }
+
+  &:active {
+    background-color: #D0D0DB;
+    box-shadow: inset 0 1px 3px 0 rgba(21,24,51,0.1);
+  }
 }
 
 /* size */
